--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Stellar Shop</h1>
         <ul>
             <li><a href="#Produtos">Produtos</a></li>
-            <li><a href="#">Sobre Nós</a></li>
+            <li><a href="#About">Sobre Nós</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
     </header>
@@ -21,10 +21,32 @@
                 <header>
                     <h2>Produtos</h2>
                 </header>
-                <div class="produto">
-                    <img src="./images/EstrelaBrilhante.jpeg" alt="EstrelaBrilhante">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga amet incidunt cumque facilis voluptatem libero numquam, deleniti inventore. Ea ullam assumenda amet esse quos commodi unde cum quaerat ut tenetur.</p>
-                    <p>R$ 1.964.410,99</p>
+                <div class="Venda">
+                    <produto>
+                        <img src="./images/EstrelaBrilhante.jpeg" alt="EstrelaBrilhante">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga amet incidunt cumque facilis voluptatem libero numquam, deleniti inventore. Ea ullam assumenda amet esse quos commodi unde cum quaerat ut tenetur.</p>
+                        <h3>R$ 1.964.410,99</h3>
+                        <a href="#">Comprar</a>
+                    </produto>
+                    <produto>
+                        <img src="./images/EstrelaEstridente.jpeg" alt="EstrelaEstridente">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dicta harum enim, neque nobis explicabo minus, voluptatibus incidunt deleniti laudantium reprehenderit excepturi eligendi repellendus nostrum delectus numquam placeat repellat amet?</p>
+                        <h3>R$ 2.541.365,00</h3>
+                        <a href="#">Comprar</a>
+                    </produto>
+                    <produto>
+                        <img src="./images/Universo.jpg" alt="Universo">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, modi nobis facilis quasi vel, excepturi beatae ad eligendi, nesciunt minima tempora quae distinctio inventore! Eius, deleniti? Tenetur magnam voluptatem aliquid.</p>
+                        <h3>R$ 25.546.541,00</h3>
+                        <a href="#">Comprar</a>
+                    </produto>
+                </div>
+            </section>
+            <section id="About">
+                <div class="Sobre">
+                    <img src="./images/STELLAR_NEGRITO.png" alt="LOGOTIPO STELLAR">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veniam vero non ipsum maxime magnam aspernatur omnis! Soluta voluptatibus, fugiat temporibus molestias sapiente quod minus repudiandae deleniti, nemo voluptatem facere?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed recusandae in blanditiis asperiores maxime aliquam rem. Laudantium, accusantium ad consequuntur et earum at autem! Asperiores possimus culpa rem praesentium.</p>
                 </div>
             </section>
         </div>
