About us and Footer
Complementando e finalizando a parte sobre a empresa,
E começando o Rodapé

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Stellar Shop</h1>
         <ul>
             <li><a href="#Produtos">Produtos</a></li>
-            <li><a href="#About">Sobre Nós</a></li>
+            <li><a href="#about">Sobre Nós</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
     </header>
@@ -42,14 +42,45 @@
                     </produto>
                 </div>
             </section>
-            <section id="About">
-                <div class="Sobre">
-                    <img src="./images/STELLAR_NEGRITO.png" alt="LOGOTIPO STELLAR">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veniam vero non ipsum maxime magnam aspernatur omnis! Soluta voluptatibus, fugiat temporibus molestias sapiente quod minus repudiandae deleniti, nemo voluptatem facere?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed recusandae in blanditiis asperiores maxime aliquam rem. Laudantium, accusantium ad consequuntur et earum at autem! Asperiores possimus culpa rem praesentium.</p>
+            <section id="about" class="container">
+                <div id="box-logo" class="box-about">
+                    <img src="images/STELLAR_NEGRITO.png" alt="LOGOTIPO">
+                </div>
+                <div id="box-quem" class="box-about">
+                    <h2>QUEM SOMOS</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam numquam ipsam, id corrupti ipsa nostrum praesentium temporibus hic odit quos eum mollitia nam distinctio doloremque illum voluptatibus harum commodi dolor!
+                    </p>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum repudiandae quam perspiciatis id vitae nemo unde quae itaque, ea dignissimos provident nihil laboriosam sunt incidunt eveniet molestias cumque, voluptatibus ducimus?                    
+                    </p>
                 </div>
             </section>
-        </div>
+            
     </main>
+    <footer>
+        <section id="Contact">
+            <h2>CONTATO</h2>
+            <div class="conteudo">
+                <div class="box-contato">
+                    <h3>ENVIE SEU FEEDBACK</h3>
+                    <div class="form">
+                        <form>
+                            <input type="text" placeholder="Seu Nome">
+                            <input type="email" placeholder="Seu E-mail">
+                            <input type="tel" placeholder="Seu Telefone">
+                            <textarea placeholder="Sua mensagem"></textarea>
+                            <button type="submit">Enviar</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="social-media">
+                    <h3>Siga Nossas Redes Sociais</h3>
+                    <a href=""></a>
+                </div>
+                </section>
+                </div>
+            </div>
+    </footer>
 </body>
 </html>
