--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!--FONTE H --> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+
+    <!-- FONTE PADRÃO-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
@@ -12,7 +22,7 @@
         <ul>
             <li><a href="#Produtos">Produtos</a></li>
             <li><a href="#about">Sobre Nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#Contact">Contato</a></li>
         </ul>
     </header>
     <main>
@@ -76,7 +86,9 @@
                 </div>
                 <div class="social-media">
                     <h3>Siga Nossas Redes Sociais</h3>
-                    <a href=""></a>
+                    <a href="#"><img src="./images/instagram.png" alt="LOGOTIPO INSTAGRAM"></a>
+                    <a href="#"><img src="./images/facebook.png" alt="LOGOTIPO facebook.png"></a>
+                    <a href="#"><img src="./images/youtube.png" alt="LOGOTIPO youtube.png"></a>
                 </div>
                 </section>
                 </div>
